got a rough header

--- a/index.html
+++ b/index.html
@@ -15,10 +15,13 @@
         <div class = "right-side">
             <ul class = "links">
                 <li> Home</li>
-                <li> About</li>
-                <li> CS portfolio</li>
+                <li> CS Portfolio</li>
+                <li> Resume </li>
             </ul>
         </div>
+    </div>
+    <div class = "divider">
+        <p></p>
     </div>
     
 </body>
