added the divider

--- a/index.html
+++ b/index.html
@@ -21,8 +21,12 @@
         </div>
     </div>
     <div class = "divider">
-        <p></p>
+        <hr>  </hr>
+        <h3 class = "abt-me"> About me</h3>
+        <hr class = "divider-bot"> </hr>
     </div>
+
+
     
 </body>
 </html>
