added some more information about myself

--- a/index.html
+++ b/index.html
@@ -22,11 +22,67 @@
     </div>
     <div class = "divider">
         <hr>  </hr>
-        <h3 class = "abt-me"> About me</h3>
+        <h3 class = "abt-me-div"> About me</h3>
         <hr class = "divider-bot"> </hr>
     </div>
 
+    <div class = "abt-me">
+        <div class = "img">
+            <img class = "headshot" src = "images/headshot.jpeg" alt = "headshot of me">
+        </div>
+        <div class = "info-abt-me">
+            <h1> Background: </h1>
+            <p> I am currently a sophomore studying computer science and math at Boston 
+                Univeristy. I was born and raised in Washington State, 
+                but always found myself wanting to see and explore more of the country, 
+                part of the reason I decided to travel all the way across the 
+                country to Boston. 
+            </p>
+            <p> Computer science has always intriguied me since I was a little kid. My dad 
+                taught himself all the coding knowledge he has today and currently does a 
+                lot of work with web development. A lot of my curiousity comes from my dad
+                as I would continually ask him questions and he would always be able to answer.
+                It is thanks to him that I find myself so interested in computer science and 
+                the heaby depth that comes with this field of science.
+            </p>
+        </div>
+    </div>
 
+    <div class = "divider">
+        <hr>  </hr>
+        <h3 class = "abt-me-div"> Other info</h3>
+        <hr class = "divider-bot"> </hr>
+    </div>
+
+    <div class = "other-info">
+        <div class = "other-info-abt-me">
+            <h1> Some other info about me:</h1>
+            <p> Another huge reason that I chose Boston University was because
+                I was given an oppurtunity to swim on the University's swim team.
+                This has turned into one of the most positive experiences of my life 
+                as swimming has always created an extremely positive structure for me. 
+                On top of that, the friends and connections that I have made on the team
+                are some of the most important in my life.
+            </p>
+            <p> Outside of swimming, I really enjoy hanging out with friends and playing
+                video games. Game development has always heavily intriguied me and something
+                that I have worked on myself over time. Currently, game dev is my favorite part
+                of computer science as I feel it encomopasses so much of the field.
+            </p>
+            <p>
+                Ultimately, my goal with computer science is to make the world a better place.
+                If something that I can create or help create can make someones life easier, 
+                more enjoyable, or more interesting than I would have found myself successful
+                in one way or another.
+            </p>
+        </div>
+        <img class = "swim-pic" src = "images/Swim-pic.jpg" alt = "Swimming Picture">
+    </div>
+
+    <div class = "footer"> 
+
+        
+    </div>
     
 </body>
 </html>
