added the page that has the entire cs portfolio, branching to course work, projects, and work

--- a/CS-portfolio.html
+++ b/CS-portfolio.html
@@ -27,7 +27,7 @@
     <div class = "divider">
         <hr>  </hr>
         <h3 class = "divider-text"> Computer Science Portfolio</h1>
-        <p> This section highlights some of my experience with computer science.
+        <p class = "divider-info"> This section highlights some of my experience with computer science.
             It includes some of the coursework I've covered, personal projects 
             I've worked on, and job experience.
         </p>
@@ -35,8 +35,49 @@
     </div>
 
     <div class = "course-work">
-        
+        <h3> Major Related Courses</h3>
+        <div class = "course-work-content">
+        <div class = "course-work-info">
+            <p> Here are some of the computer science/math related courses that I've taken so far. 
+            My expected graduation date is May of 2026.
+        </p>
     </div>
+    <div class = "course-work-link">
+        <a href = "courseWork.html"> <btn ID = "learn-more"> Learn More</btn></a>
+    </div>
+</div>
+
+    </div> 
+
+    <div class = "projects">
+        <h3> Personal Projects</h3>
+        <div class = "project-content">
+        <div class = "project-info">
+            <p> Here are some Personal Projects I have developed. Some of these
+                were purely out of curiosity while others were made to fix a problem. 
+                Each page will share more information about the project as well as how
+                you can access it.
+        </p>
+    </div>
+    <div class = "project-link">
+        <a href = "personalProjects.html"> <btn ID = "learn-more"> Learn More</btn></a>
+    </div>
+</div>
+</div> 
+
+<div class = "work">
+    <h3> Work Experience</h3>
+    <div class = "work-content">
+    <div class = "work-info">
+        <p> Here is some computer science involved work that I have completed. From 
+            some personal things, to internships, and jobs.
+    </p>
+</div>
+<div class = "work-link">
+    <a href = "workExperience.html"> <btn ID = "learn-more"> Learn More</btn></a>
+</div>
+</div>
+</div> 
    
 </body>
 </html>
