the home page to the portfolio

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="styles.css" />
     <title>E-Portfolio</title>
+    <script src="https://kit.fontawesome.com/f3e2d3b0f2.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <div class = "header">
@@ -14,15 +15,16 @@
         </div>
         <div class = "right-side">
             <ul class = "links">
-                <li> Home</li>
-                <li> CS Portfolio</li>
-                <li> Resume </li>
+                <li> <a href = "index.html">Home</a></li>
+                <li><a href = "CS-portfolio.html"> 
+                    CS Portfolio</a></li>
+                <li><a href = "resume.html">Resume </a> </li>
             </ul>
         </div>
     </div>
     <div class = "divider">
         <hr>  </hr>
-        <h3 class = "abt-me-div"> About me</h3>
+        <h3 class = "divider-text"> About me</h3>
         <hr class = "divider-bot"> </hr>
     </div>
 
@@ -50,7 +52,7 @@
 
     <div class = "divider">
         <hr>  </hr>
-        <h3 class = "abt-me-div"> Other info</h3>
+        <h3 class = "divider-text"> Other info</h3>
         <hr class = "divider-bot"> </hr>
     </div>
 
@@ -76,12 +78,17 @@
                 in one way or another.
             </p>
         </div>
-        <img class = "swim-pic" src = "images/Swim-pic.jpg" alt = "Swimming Picture">
+        <img class = "swim-pic" src = "images/Swim-pic.png" alt = "Swimming Picture">
     </div>
 
+    <div class = "divider">
+        <hr>  </hr>
+    </div>
     <div class = "footer"> 
-
         
+        <a href = https://www.linkedin.com/in/antony-ponomarev-b3630a231 target = "_blank">
+        <btn class = "linkdin"><i class="fa-brands fa-linkedin fa-2xl"></i></btn>
+            </a>
     </div>
     
 </body>
