my resume, just need to add the download link to my resume from here

--- a/resume.html
+++ b/resume.html
@@ -23,6 +23,17 @@
             </ul>
         </div>
     </div>
+
+    <div class = "divider">
+        <hr>  </hr>
+        <h3 class = "divider-text"> Resume</h1>
+        <p class = "divider-info"> Click <a href = "images/resume.pdf">here</a> to download the pdf of my resume
+        </p>
+        <hr class = "divider-bot"> </hr>
+    </div>
+
+    <img class = "resume-jpg" src = "images/resume.jpg">
+
    
    
 
