added some more stuff for the coursework

--- a/courseWork.html
+++ b/courseWork.html
@@ -31,7 +31,7 @@
     <div class = "main-content">
         <div class = "github-link">
             <p style = "font-size:16px;padding-bottom:16px;">Click on this icon to see my github where you can look at some of my projects </p>
-            <i class="fa-brands fa-github fa-2xl"></i>
+            <a href = "https://github.com/thoknee"><i class="fa-brands fa-github fa-2xl"></i></a>
         </div>
 
         <div class = "my-work">
