some more small changes

--- a/resume.html
+++ b/resume.html
@@ -27,7 +27,7 @@
     <div class = "divider">
         <hr>  </hr>
         <h3 class = "divider-text"> Resume</h1>
-        <p class = "divider-info"> Click <a href = "images/resume.pdf">here</a> to download the pdf of my resume
+        <p class = "divider-info"> Click <a href = "images/resume.pdf" targer = "_blank">here</a> to download the pdf of my resume
         </p>
         <hr class = "divider-bot"> </hr>
     </div>
