changed the pictures, once again

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
     <div class = "abt-me">
         <div class = "img">
-            <img class = "headshot" src = "images/headshot.jpeg" alt = "headshot of me">
+            <img class = "headshot" src = "images/headshot.jpg" alt = "headshot of me">
         </div>
         <div class = "info-abt-me">
             <h1> Background: </h1>
@@ -78,7 +78,7 @@
                 in one way or another.
             </p>
         </div>
-        <img class = "swim-pic" src = "images/Swim-pic.png" alt = "Swimming Picture">
+        <img class = "swim-pic" src = "images/other-pic.PNG" alt = "Swimming Picture">
     </div>
 
     <div class = "divider">
