added another project

--- a/personalProjects.html
+++ b/personalProjects.html
@@ -35,6 +35,19 @@
     </div>
 
     <div class = "course-work">
+        <h3> Habit Building App</h3>
+        <div class = "course-work-content">
+        <div class = "course-work-info">
+            <p> Here is a habit building app that is currently in the works. I hope to finish it up over the next week or so. 
+                
+            </p>
+    </div>
+    <div class = "number-Game">
+        <a href = "habit-building.html"> <btn ID = "learn-more"> Learn More</btn></a>
+    </div>
+</div>
+
+    <div class = "course-work">
         <h3> Numerical Ordering Game</h3>
         <div class = "course-work-content">
         <div class = "course-work-info">
